[tool.poetry]
name = "hll-server-status"
version = "1.3.0"
description = "A server status tool for reporting Hell Let Loose server status to Discord"
authors = ["C. Eric Mathey <emathey@protonmail.com>"]
readme = "README.md"
packages = [{ include = "hll_server_status" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.4.2"
python-dateutil = "^2.8.2"
tomlkit = "^0.12.1"
trio = "^0.23.1"
httpx = "^0.25.0"
loguru = "^0.7.2"
discord-webhook = { git = "https://github.com/cemathey/python-discord-webhook.git", branch = "feat/anyio" }
anyio = "^3.7.1"

[tool.poetry.group.dev.dependencies]
loguru-mypy = "^0.0.4"
black = "^23.10.1"
isort = "^5.12.0"
flake8-trio = "^23.5.1"
pre-commit = "^3.5.0"
mypy = "^1.6.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
