[tool.poetry]
name = "hll-server-status"
version = "1.5.1"
description = "A server status tool for reporting Hell Let Loose server status to Discord"
authors = ["C. Eric Mathey <emathey@protonmail.com>"]
readme = "README.md"
packages = [{ include = "hll_server_status" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.6.4"
python-dateutil = "^2.9.0"
trio = "^0.24.0"
httpx = "^0.26.0"
loguru = "^0.7.2"
discord-webhook = { git = "https://github.com/cemathey/python-discord-webhook.git", branch = "feat/anyio" }
anyio = "^3.7.1"
sqlalchemy = "^2.0.28"

[tool.poetry.group.dev.dependencies]
loguru-mypy = "^0.0.4"
black = "^24.2.0"
isort = "^5.13.2"
flake8-trio = "^23.5.1"
pre-commit = "^3.6.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
