[tool.poetry]
name = "hll-server-status"
version = "2.0.0"
description = "A server status tool for reporting Hell Let Loose server status to Discord"
authors = ["C. Eric Mathey <emathey@protonmail.com>"]
readme = "README.md"
packages = [{ include = "hll_server_status" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.9.1"
python-dateutil = "^2.9.0"
trio = "^0.26.1"
httpx = "^0.27.0"
loguru = "^0.7.2"
discord-webhook = { git = "https://github.com/cemathey/python-discord-webhook.git", branch = "feat/anyio" }
anyio = "^3.7.1"
sqlalchemy = "^2.0.32"

[tool.poetry.group.dev.dependencies]
loguru-mypy = "^0.0.4"
black = "^24.4.2"
isort = "^5.13.2"
flake8-trio = "^24.3.9"
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "hll_server_status"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
